--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <p>Nothing to see here...</p>
-  <h1>hi rafi</h1>
+  <h1>hi rafi github my mobile</h1>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
